test/errors/resolution/unknownEnumElement.chpl
enum creativeColors {
  red, blue
};
// Green is not a creative color
var x = creativeColors.green;
